--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,15 @@ services:
     volumes:
       - .:/go/src/github.com/abyssparanoia/catharsis
     command: ash -c "realize start"
+
+  authentication-db:
+    image: postgres:10-alpine
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: password
+    volumes:
+      - ./db/authentication/data:/var/lib/postgresql/data
+      - ./db/authentication/sql:/docker-entrypoint-initdb.d
+    ports:
+      - "5432:5432"
